tests/fail/ComplementErrors.java
package fail;

import java.lang.System;


public class ComplementErrors {
    public static void main(String[] args){
        System.out.println(~'a');
    }
}
